updated loader color 🎶

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
   border: 8px solid #dfc;
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #222222 transparent transparent transparent;
+  border-color: silver transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
