--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ svg {
 }
 #clickMap span::before {
   content: "";
-  background-image: url("/img/infoIcon.svg");
+  background-image: url("https://elcozy.github.io/covid19-nigeria/img/infoIcon.svg");
   background-repeat: no-repeat;
   background-size: contain;
   vertical-align: top;
